# cmake-starter

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
test/: CMakeLists.txt  main.cc
